<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome">Welcome to the Quiz</string>
    <string name="enter_your_name">Username</string>
    <string name="password">Password</string>
    <string name="tagline">Please Enter Your Name</string>
    <string name="start">START</string>
    <string name="quest">Enter your question</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="button">Submit</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="adminDashBar">Admin DashBoard</string>
    <string name="Number_of_quiz">Quiz 1</string>
</resources>